--- a/Basic/Project1.vcxproj
+++ b/Basic/Project1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{7bf42ce2-12c8-440b-b6fa-748bfbdab1b1}</ProjectGuid>
     <RootNamespace>Project1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Basic</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
